# evagene-integration-examples

./: .gitignore  LICENSE  README.md  getting-started.md
archive-triage-runner/python/: pyproject.toml
archive-triage-runner/python/src/archive_triage/: __init__.py  __main__.py  app.py  config.py  csv_writer.py  evagene_client.py  gedcom_scanner.py  http_gateway.py  row_result.py  triage_service.py
archive-triage-runner/python/tests/: test_config.py  test_csv_writer.py  test_evagene_client.py  test_gedcom_scanner.py  test_triage_service.py
call-notes-to-pedigree/python/: pyproject.toml  requirements.txt
call-notes-to-pedigree/python/src/call_notes_to_pedigree/: __main__.py  anthropic_extractor.py  app.py  config.py  evagene_client.py  extracted_family.py  extraction_schema.py  transcript_source.py
call-notes-to-pedigree/python/tests/: test_anthropic_extractor.py  test_config.py  test_evagene_writer.py  test_extraction_schema.py  test_presenter.py
couple-carrier-risk/python/: pyproject.toml
couple-carrier-risk/python/src/couple_carrier_risk/: __init__.py  __main__.py  app.py  config.py  couple_risk_calculator.py  evagene_client.py  genome_file.py  http_gateway.py  orchestrator.py  presenters.py
couple-carrier-risk/python/tests/: fixtures_loader.py  test_config.py  test_couple_risk_calculator.py  test_evagene_client.py  test_genome_file.py  test_orchestrator.py  test_presenters.py
family-history-intake-form/python/: .env.example  pyproject.toml  requirements.txt
family-history-intake-form/python/src/family_intake/: __init__.py  __main__.py  app.py  config.py  evagene_client.py  http_gateway.py  intake_service.py  intake_submission.py  server.py  views.py
family-history-intake-form/python/tests/: test_evagene_client.py  test_intake_service.py  test_intake_submission.py
longitudinal-risk-monitor/python/: .env.example  pyproject.toml
longitudinal-risk-monitor/python/src/longitudinal_risk_monitor/: __init__.py  __main__.py  app.py  config.py  evagene_client.py  evaluator.py  history_presenter.py  http_gateway.py  nice_parser.py  notifier.py  orchestrator.py  state_store.py
longitudinal-risk-monitor/python/tests/: test_config.py  test_evagene_client.py  test_evaluator.py  test_notifier.py  test_orchestrator.py  test_smoke_end_to_end.py  test_state_store.py
mcp-server/python/: pyproject.toml  requirements-dev.txt  requirements.txt
mcp-server/python/scripts/: smoke_test.py
mcp-server/python/src/evagene_mcp/: __init__.py  __main__.py  app.py  config.py  evagene_client.py  http_gateway.py  server.py  tool_handlers.py
mcp-server/python/tests/: fakes.py  test_config.py  test_evagene_client.py  test_server_protocol.py  test_tool_handlers.py
nice-traffic-light/python/: pyproject.toml
nice-traffic-light/python/src/nice_traffic_light/: __init__.py  __main__.py  app.py  classifier.py  config.py  http_gateway.py  presenter.py  risk_api_client.py  traffic_light.py
nice-traffic-light/python/tests/: test_classifier.py  test_config.py  test_presenter.py  test_risk_api_client.py  test_traffic_light.py
pedigree-ocr/python/: pyproject.toml  requirements.txt
pedigree-ocr/python/src/pedigree_ocr/: __main__.py  app.py  config.py  evagene_client.py  evagene_writer.py  extracted_family.py  extraction_schema.py  image_source.py  presenter.py  vision_extractor.py
pedigree-ocr/python/tests/: test_config.py  test_evagene_writer.py  test_extraction_schema.py  test_image_source.py  test_presenter.py  test_vision_extractor.py
publication-figure-renderer/python/: pyproject.toml  requirements-dev.txt  requirements.txt
publication-figure-renderer/python/src/publication_figure_renderer/: __init__.py  __main__.py  app.py  config.py  evagene_client.py  http_gateway.py  label_mapper.py  output_writer.py  svg_deidentifier.py
publication-figure-renderer/python/tests/: test_config.py  test_evagene_client.py  test_label_mapper.py  test_output_writer.py  test_svg_deidentifier.py
research-cohort-anonymiser/python/: pyproject.toml
research-cohort-anonymiser/python/src/research_anonymiser/: __init__.py  __main__.py  anonymiser.py  app.py  config.py  evagene_client.py  generation_assigner.py  http_gateway.py  k_anonymity_estimator.py  presenter.py  writer.py
research-cohort-anonymiser/python/tests/: test_anonymiser.py  test_app.py  test_config.py  test_evagene_client.py  test_generation_assigner.py  test_k_anonymity_estimator.py  test_presenter.py
shareable-pedigree-link/python/: pyproject.toml
shareable-pedigree-link/python/src/shareable_pedigree_link/: __init__.py  __main__.py  app.py  clock.py  config.py  evagene_client.py  key_name.py  presenter.py  snippet_builder.py
shareable-pedigree-link/python/tests/: test_app.py  test_config.py  test_evagene_client.py  test_snippet_builder.py
tumour-board-briefing/python/: pyproject.toml  requirements-dev.txt  requirements.txt
tumour-board-briefing/python/src/tumour_board_briefing/: __init__.py  __main__.py  app.py  boilerplate.py  config.py  evagene_client.py  http_gateway.py  orchestrator.py  pdf_builder.py  risk_aggregator.py
tumour-board-briefing/python/tests/: fixtures_loader.py  test_boilerplate.py  test_config.py  test_evagene_client.py  test_orchestrator.py  test_pdf_builder.py  test_pdf_end_to_end.py  test_risk_aggregator.py
voice-driven-intake/python/: .env.example  pyproject.toml  requirements.txt
voice-driven-intake/python/src/voice_driven_intake/: __main__.py  app.py  audio_probe.py  audio_source.py  chunker.py  config.py  (+9 more)
voice-driven-intake/python/tests/: test_audio_source.py  test_chunker.py  test_config.py  test_evagene_writer.py  test_extraction_schema.py  test_presenter.py  test_text_extractor.py  test_whisper_transcriber.py
webhook-audit-blotter/python/: pyproject.toml
webhook-audit-blotter/python/tests/: test_config.py  test_event_store.py  test_server.py  test_signature_verifier.py  test_webhook_handler.py
xeg-upgrader/python/: pyproject.toml
xeg-upgrader/python/tests/: _fixtures.py  conftest.py  test_config.py  test_evagene_client.py  test_summary_printer.py  test_xeg_reader.py
(+657 files in other folders)
