[project]
name = "family-history-intake-form"
version = "0.1.0"
description = "Evagene integration example: Flask web form that creates a pedigree via the REST API."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "flask==3.1.0",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.7.4",
    "mypy==1.13.0",
]

[project.scripts]
family-intake = "family_intake.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RET", "N", "C4", "PL", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]
"src/family_intake/views.py" = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]
