[project]
name = "shareable-pedigree-link"
version = "0.1.0"
description = "Evagene integration example: mint a read-only key and print an iframe embed snippet."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.7.4",
    "mypy==1.13.0",
]

[project.scripts]
shareable-pedigree-link = "shareable_pedigree_link.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "SIM", "RET", "N", "C4", "PL", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]
