[project]
name = "tumour-board-briefing"
version = "0.1.0"
description = "Evagene integration example: one-command PDF briefing for an oncology MDT / tumour board."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx==0.27.2",
    "reportlab==4.2.5",
    "svglib==1.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.7.4",
    "mypy==1.13.0",
    "pypdf==5.1.0",
]

[project.scripts]
tumour-board-brief = "tumour_board_briefing.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "B", "UP", "SIM", "RET", "N", "C4", "PL", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["svglib.*", "reportlab.*"]
ignore_missing_imports = true
